add info for spec

--- a/GNetworkingDemo/Podfile
+++ b/GNetworkingDemo/Podfile
@@ -1,5 +1,5 @@
 platform :ios, '7.0'
 target 'GNetworkingDemo' do
-pod 'AFNetworking', '~> 2.0'
+pod 'AFNetworking', '~> 2.6.3’
 pod 'AFDownloadRequestOperation', '~> 2.0.1'
 end
